refactor: unify common test data into a single class; reduce magic numbers where possible